solved image alignment

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -83,7 +83,7 @@
         }
       }
     }
-    svg {
+    img {
       display: none;
       width: 22px;
       @include little-desktop {
